@@ -584,30 +584,31 @@ class Turba_Api extends Horde_Registry_Api
      * @param string $source       The source into which the contact will be
      *                             imported.
      *
-     * @return string  The new UID, or false on failure.
+     * @return string  The new UID.
+     *
      * @throws Turba_Exception
+     * @throws Turba_Exception_ObjectExists
      */
-    public function import($content, $contentType = 'array',
-                           $import_source = null)
+    public function import($content, $contentType = 'array', $source = null)
     {
-        global $cfgSources, $prefs;
+        global $cfgSources, $injector, $prefs;
 
         /* Get default address book from user preferences. */
-        if (is_null($import_source) &&
-            !($import_source = $prefs->getValue('default_dir'))) {;
+        if (is_null($source) &&
+            !($source = $prefs->getValue('default_dir'))) {
             /* On new installations default_dir is not set; use first source
              * instead. */
-            $import_source = key(Turba::getAddressBooks(Horde_Perms::EDIT));
+            $source = key(Turba::getAddressBooks(Horde_Perms::EDIT));
         }
 
         // Check existence of and permissions on the specified source.
-        if (!isset($cfgSources[$import_source])) {
-            throw new Turba_Exception(sprintf(_("Invalid address book: %s"), $import_source));
+        if (!isset($cfgSources[$source])) {
+            throw new Turba_Exception(sprintf(_("Invalid address book: %s"), $source));
         }
 
-        $driver = $GLOBALS['injector']
+        $driver = $injector
             ->getInstance('Turba_Factory_Driver')
-            ->create($import_source);
+            ->create($source);
 
         if (!$driver->hasPermission(Horde_Perms::EDIT)) {
             throw new Turba_Exception(_("Permission denied"));
@@ -679,10 +680,10 @@ class Turba_Api extends Horde_Registry_Api
             $content = $driver->toHash($content);
         }
 
-        // Check if the entry already exists in the data source:
+        // Check if the entry already exists in the data source.
         $result = $driver->search($content);
         if (count($result)) {
-            throw new Turba_Exception(_("Already Exists"));
+            throw new Turba_Exception_ObjectExists(_("Already Exists"));
         }
 
         // We can't use $object->setValue() here since that cannot be used
