@@ -1,0 +1,17 @@
+<?php
+/**
+ * Exception thrown if a Turba Object already exists.
+ *
+ * Copyright 2012 Horde LLC (http://www.horde.org/)
+ *
+ * See the enclosed file LICENSE for license information (ASL).  If you
+ * did not receive this file, see http://www.horde.org/licenses/apache.
+ *
+ * @author   Michael Slusarz <slusarz@horde.org>
+ * @category Horde
+ * @license  http://www.horde.org/licenses/apache ASL
+ * @package  Turba
+ */
+class Turba_Exception_ObjectExists extends Horde_Exception_Wrapped
+{
+}
