@@ -2,6 +2,8 @@
 v4.0-git
 --------
 
+[mms] Import API call now throws an ObjectExists exception when a duplicate is
+      found.
 [jan] Add parameters to specify field size of phone and email fields.
 
 
